Added delete api
